<?xml version="1.0"?>
<package format="2">
  <name>snr_waypoint_planner</name>
  <version>0.0.0</version>
  <description>The snr_waypoint_planner package</description>

  <maintainer email="hsener3@ford.com.tr">Hasan Sener</maintainer>
  <license>MIT</license>
  <url type="website">http://github.com/snrdevs</url>

  <author email="hsener3@ford.com.tr">Hasan Sener</author>


  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>

  <export></export>
</package>
